--- a/css/style.css
+++ b/css/style.css
@@ -6380,8 +6380,7 @@ p {
 	top: 0;
 	left: -100%;
 	background-image: linear-gradient(to left top, rgba(48, 113, 103, .5) 0%, rgba(87, 188, 144, .7) 100%);
-	background-image: url(/images/join-bg.png);
-	background-size: contain; /* background-image: linear-gradient(to left top,rgba(51, 255, 224, 0.33) 0%,rgba(25, 47, 37, 0.81) 100%); */ /* background: rgba(255, 255, 255, .9); */
+	background-image: linear-gradient(to left top,rgba(51, 255, 224, 0.33) 0%,rgba(25, 47, 37, 0.81) 100%); 
 	color: #fff;
 	height: 100%;
 	width: 100%;
@@ -6405,6 +6404,7 @@ p {
 .card-overlay-heading {
 	font-weight: 900;
 	color: #111c24;
+	color: white;
 	letter-spacing: 2px;
 	text-transform: capitalize;
 }
